--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap");
+:root {
+  --primary-color: #ff8115;
+}
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +17,8 @@ canvas {
 
 body {
   background-color: rgb(0, 0, 0);
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
   color: rgb(255, 255, 255);
 }
 
@@ -33,4 +38,21 @@ body {
 
 .container ul li {
   padding-right: 4vw;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 60vh;
+  line-height: 7vh;
+  z-index: 100;
+}
+.hero h1 {
+  font-family: "Anonymous Pro", monospace;
+}
+.hero h1 span {
+  color: var(--primary-color);
 }
