--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 :root {
-  --primary-color: #ff8115;
+  --primary-color: #3382a9;
 }
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
+  font-family: "Play", sans-serif;
 }
-
+span {
+  color: var(--primary-color);
+}
 canvas {
   position: fixed;
   top: 0;
@@ -16,43 +19,94 @@ canvas {
 }
 
 body {
+  max-width: 100vw;
   background-color: rgb(0, 0, 0);
-  background-size: 100vw 100vh;
   background-repeat: no-repeat;
   color: rgb(255, 255, 255);
+  overflow-x: hidden;
 }
-
 .container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
   max-width: 1400px;
   margin: auto;
-  padding: 4vh 7vw;
+}
+.jc {
+  justify-content: space-between;
+  padding: 2em 5em;
+  height: 11.5vh;
 }
 
-.container ul {
-  list-style: none;
+.nav-bar ul {
   display: flex;
 }
+.nav-bar ul li {
+  list-style: none;
+  margin-left: 5vw;
+  border-radius: 10px;
+  background-color: var(--primary-color);
+  position: relative;
+}
+.nav-bar ul li img {
+  position: absolute;
+  top: -30px;
+  left: -15px;
+}
 
-.container ul li {
-  padding-right: 4vw;
+.nav-bar ul li a {
+  display: block;
+  padding: 0.5em 2em;
+  text-decoration: none;
+  color: white;
 }
 
 .hero {
-  display: flex;
+  height: 90vh;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  line-height: 10rem;
+  padding-top: 20vh;
+  justify-content: flex-start;
   text-align: center;
-  height: 60vh;
-  line-height: 7vh;
-  z-index: 100;
 }
 .hero h1 {
-  font-family: "Anonymous Pro", monospace;
+  font-size: 7rem;
 }
-.hero h1 span {
-  color: var(--primary-color);
+.hero h2 {
+  font-size: 2.5rem;
+}
+
+.about {
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  align-items: flex-start;
+}
+.about::after {
+  z-index: 4;
+  content: " ";
+  position: absolute;
+  display: block;
+  bottom: -300px;
+  left: -200px;
+  height: 500px;
+  width: 150vw;
+  transform: rotateZ(25deg);
+  background-image: linear-gradient(to right, black, var(--primary-color));
+}
+
+.about h1 {
+  z-index: 5;
+  text-align: left;
+  width: 50rem;
+  font-style: normal;
+  font-size: 15rem;
+}
+
+.about p {
+  width: 40rem;
+  z-index: 6;
+  font-size: 1.9rem;
+  margin-left: 25vw;
 }
