--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 :root {
   --primary-color: #3382a9;
+  --dark-color: #006091;
 }
 * {
   margin: 0;
@@ -9,6 +10,10 @@
   /* font-family: "Poppins", sans-serif; */
   font-family: "Play", sans-serif;
 }
+*:not(canvas) {
+  z-index: 3;
+}
+
 span {
   color: var(--primary-color);
 }
@@ -80,15 +85,16 @@ body {
   flex-direction: column;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 150vh;
   align-items: flex-start;
+  justify-content: flex-start;
 }
 .about::after {
   z-index: 4;
   content: " ";
   position: absolute;
   display: block;
-  bottom: -300px;
+  top: 500px;
   left: -200px;
   height: 500px;
   width: 150vw;
@@ -100,13 +106,59 @@ body {
   z-index: 5;
   text-align: left;
   width: 50rem;
-  font-style: normal;
+  font-weight: 400;
   font-size: 15rem;
 }
 
 .about p {
-  width: 40rem;
   z-index: 6;
   font-size: 1.9rem;
-  margin-left: 25vw;
+  margin-left: 20vw;
+  margin-bottom: 30vh;
+}
+
+.projects {
+  height: 100vh;
+  align-items: flex-start;
+}
+.projects h1 {
+  z-index: 99;
+  font-size: 10rem;
+}
+
+.contact {
+  flex-direction: column;
+  line-height: 1.5;
+}
+.contact h1,
+.contact h3 {
+  font-size: 10rem;
+  font-weight: 400;
+}
+
+.contact button {
+  background-color: var(--primary-color);
+  border: none;
+  width: 20rem;
+  height: 7rem;
+  border-radius: 10pc;
+}
+.contact button a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 3rem;
+}
+.links {
+  margin-top: 5em;
+}
+.links a img {
+  width: 8rem;
+  margin-left: 5vw;
+}
+
+/* hover */
+
+.hover:hover {
+  cursor: pointer;
+  transform: scale(0.9);
 }
