--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 :root {
   --primary-color: #3382a9;
   --dark-color: #006091;
 }
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: var(--dark-color);
+}
+
 * {
   margin: 0;
   padding: 0;
-  /* font-family: "Poppins", sans-serif; */
   font-family: "Play", sans-serif;
 }
 *:not(canvas) {
@@ -39,10 +52,12 @@ body {
 }
 .jc {
   justify-content: space-between;
-  padding: 2em 5em;
+  padding: 2em;
   height: 11.5vh;
 }
-
+.jc:first-child a img {
+  width: 90px;
+}
 .nav-bar ul {
   display: flex;
 }
@@ -76,9 +91,13 @@ body {
 }
 .hero h1 {
   font-size: 7rem;
+  animation: back-to-top 700ms ease-in;
 }
 .hero h2 {
   font-size: 2.5rem;
+  opacity: 0;
+  transform: translateY(100%);
+  animation: down-to-up 500ms ease-out 750ms forwards;
 }
 
 .about {
@@ -160,5 +179,29 @@ body {
 
 .hover:hover {
   cursor: pointer;
-  transform: scale(0.9);
+  transform: scale(0.95);
+}
+
+/* animation */
+
+@keyframes left-to-right {
+  0% {
+    transform: translateX(-100%);
+  }
+}
+@keyframes right-to-left {
+  0% {
+    transform: translateX(100%);
+  }
+}
+@keyframes down-to-up {
+  100% {
+    opacity: 100;
+    transform: translateY(0);
+  }
+}
+@keyframes back-to-top {
+  0% {
+    opacity: 0;
+  }
 }
