--- a/style.css
+++ b/style.css
@@ -91,13 +91,11 @@ body {
 }
 .hero h1 {
   font-size: 7rem;
-  animation: back-to-top 700ms ease-in;
 }
 .hero h2 {
   font-size: 2.5rem;
   opacity: 0;
   transform: translateY(100%);
-  animation: down-to-up 500ms ease-out 750ms forwards;
 }
 
 .about {
@@ -127,6 +125,7 @@ body {
   width: 50rem;
   font-weight: 400;
   font-size: 15rem;
+  transform: translateX(-150%);
 }
 
 .about p {
@@ -134,6 +133,7 @@ body {
   font-size: 1.9rem;
   margin-left: 20vw;
   margin-bottom: 30vh;
+  opacity: 0;
 }
 
 .projects {
@@ -188,6 +188,9 @@ body {
   0% {
     transform: translateX(-100%);
   }
+  100% {
+    transform: translateX(0%);
+  }
 }
 @keyframes right-to-left {
   0% {
@@ -204,4 +207,17 @@ body {
   0% {
     opacity: 0;
   }
+  100% {
+    opacity: 100%;
+  }
+}
+
+.animation1 {
+  animation: back-to-top 700ms ease-in;
+}
+.animation2 {
+  animation: down-to-up 500ms ease-out 750ms forwards;
+}
+.animation3 {
+  animation: left-to-right 700ms ease-in forwards;
 }
