--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 :root {
   --primary-color: #3382a9;
-  --dark-color: #006091;
+  --dark-color: #1d5673;
 }
 ::-webkit-scrollbar {
   width: 8px;
@@ -30,17 +30,21 @@
 span {
   color: var(--primary-color);
 }
-canvas {
+#bg {
   position: fixed;
   top: 0;
   left: 0;
 }
 
 body {
-  max-width: 100vw;
   background-color: rgb(0, 0, 0);
   background-repeat: no-repeat;
   color: rgb(255, 255, 255);
+}
+main {
+  overflow-x: hidden;
+}
+header {
   overflow-x: hidden;
 }
 .container {
@@ -57,6 +61,12 @@ body {
 }
 .jc:first-child a img {
   width: 90px;
+}
+
+.arrow {
+  display: none;
+  margin: 10px;
+  cursor: pointer;
 }
 .nav-bar ul {
   display: flex;
@@ -82,11 +92,11 @@ body {
 }
 
 .hero {
-  height: 90vh;
+  height: max-content;
   flex-direction: column;
   line-height: 10rem;
-  padding-top: 20vh;
-  justify-content: flex-start;
+  margin-top: 20vh;
+  margin-bottom: 40vh;
   text-align: center;
 }
 .hero h1 {
@@ -99,10 +109,11 @@ body {
 }
 
 .about {
+  width: 100%;
+  margin-bottom: 400px;
   flex-direction: column;
   position: relative;
-  width: 100%;
-  height: 150vh;
+  height: max-content;
   align-items: flex-start;
   justify-content: flex-start;
 }
@@ -136,18 +147,23 @@ body {
   opacity: 0;
 }
 
-.projects {
+.skills {
   height: 100vh;
-  align-items: flex-start;
+  align-items: center;
+  flex-direction: column;
 }
-.projects h1 {
+.skills h1 {
   z-index: 99;
   font-size: 10rem;
 }
-
+#canvas {
+  z-index: 4;
+  margin-bottom: 400px;
+}
 .contact {
   flex-direction: column;
   line-height: 1.5;
+  text-align: center;
 }
 .contact h1,
 .contact h3 {
@@ -211,7 +227,24 @@ body {
     opacity: 100%;
   }
 }
-
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate2 {
+  100% {
+    transform: rotate(180deg);
+  }
+}
+@keyframes slide-down {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100%;
+  }
+}
 .animation1 {
   animation: back-to-top 700ms ease-in;
 }
@@ -220,4 +253,90 @@ body {
 }
 .animation3 {
   animation: left-to-right 700ms ease-in forwards;
+}
+.animation4 {
+  animation: rotate 300ms ease-in-out 100ms forwards;
+}
+.animation5 {
+  animation: back-to-top 700ms ease-in, rotate2 300ms ease-in-out 100ms forwards;
+}
+.animation6 {
+  animation: slide-down 300ms ease-in-out 100ms forwards;
+}
+/*media*/
+@media (max-width: 800px) {
+  .jc {
+    flex-direction: column;
+    height: fit-content;
+  }
+  .arrow {
+    display: block;
+  }
+  .nav-bar ul {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav-bar {
+    display: none;
+    background-color: var(--dark-color);
+    width: 100vw;
+    margin: 10px;
+    padding: 10px;
+  }
+  .nav-bar ul li {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
+    margin: 15px;
+    width: 80%;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero h1 {
+    font-size: 2rem;
+    line-height: 1rem;
+  }
+  .hero h2 {
+    font-size: 1.5rem;
+  }
+  .about::after {
+    top: 100px;
+    left: -100px;
+    height: 325px;
+    width: 150vw;
+  }
+  .about h1 {
+    margin-left: 10vw;
+    font-size: 5rem;
+    width: 24rem;
+  }
+  .about p {
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  .skills h1 {
+    font-size: 5rem;
+  }
+  .contact h1 {
+    font-size: 3rem;
+  }
+  .contact button {
+    width: 12rem;
+    height: 4rem;
+  }
+  .contact button a {
+    font-size: 1.7rem;
+  }
+  .links {
+    margin-top: 2em;
+  }
+  .links a img {
+    width: 6rem;
+  }
+  .contact h3 {
+    margin-top: 1rem;
+    font-size: 4rem;
+  }
 }
